<resources>
    <string name="app_name">Face2Face</string>

    <!-- StreamConnection Screen Strings -->
    <string name="server_address_text">Address Of Server</string>
    <string name="server_address_hint_text">35.192.33.173:4579</string>
    <string name="connect_button_text">Connect</string>


    <!-- Login Screen Strings-->
    <string name="login_button_text">Login</string>
    <string name="login_name_hint_text">Username</string>
    <string name="login_email_hint_text">Email</string>

    <!-- Contacts Screen Strings-->
    <string name="call_button_text">Call</string>


    <string name="prompt_user">Username</string>
    <string name="prompt_email">Email</string>
    <string name="action_connect">Connect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_clients">DisplayClientsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_call">CallActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
