<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity" android:background="@color/background">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text"
            android:hint="@string/login_email_hint_text"
            android:textColor="@color/foreground"
            android:textColorHint="@color/foreground"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/user_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/login_name_hint_text"
            android:ems="10"
            android:id="@+id/user_text"
            android:textColor="@color/foreground" android:textColorHighlight="@color/foreground"
            android:textColorHint="@color/foreground"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt"/>
    <Button
            android:text="@string/login_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:background="@color/colorAccent"
            android:textColor="@color/a5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="256dp" app:srcCompat="@drawable/rtc_wheel"
            android:id="@+id/rtcFlowerImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="Face 2 Face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTxt"
            app:layout_constraintTop_toBottomOf="@+id/rtcFlowerImg" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp" android:layout_marginTop="8dp" android:textSize="36sp"
            android:textStyle="normal" android:textAllCaps="false" android:textColor="@color/a5"/>
    <ImageView
            android:layout_width="266dp"
            android:layout_height="224dp" app:srcCompat="@drawable/rtc_droid"
            android:id="@+id/rtcDroidImg"
            app:layout_constraintTop_toTopOf="@+id/rtcFlowerImg"
            app:layout_constraintBottom_toBottomOf="@+id/rtcFlowerImg"
            app:layout_constraintEnd_toEndOf="@+id/rtcFlowerImg"
            app:layout_constraintStart_toStartOf="@+id/rtcFlowerImg"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="24dp"/>

</android.support.constraint.ConstraintLayout>